[metadata]
name = pyzbx
version = 0.0.1
author = shaozhi.zhang
author-email = davidbjhd@gmail.com
summary = Get api interfaces zabbix data
license = MIT
description-file = README.md
home-path = https://pypi.python.org/pypi/pyabx
requires-python = >=2.6
classifier = 
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = 
    pyzbx

[entry_points]
console_scripts =
